--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include LICENSE README.rst
 recursive-include deployment *.py
-recursive-include deployment/templates *.*
+recursive-include deployment/templates *
